--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
               <a class="nav-link" href="index.html">Home</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="post.html">News</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Resources</a>
-            </li>
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="news.html">News</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="resources.html">Resources</a>
+                </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
           </ul>
         </div>
       </div>
