Changed About Us content

--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+              <h1>About Us</h1>
+              <span class="subheading">This is what we do and who we are.</span>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
                   </a>
                 </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+            <p class="copyright text-muted">Copyright &copy; UCSB EA 2017</p>
           </div>
         </div>
       </div>
