--- a/news.html
+++ b/news.html
@@ -1,4 +1,7 @@
+
+
 <!DOCTYPE html>
+
 <html lang="en">
 
   <head>
@@ -66,6 +69,24 @@
         </div>
       </div>
     </header>
+
+    <!-- <style>
+        .center-div
+      {
+          margin: 0 auto;
+          width: 100px; 
+      }
+      </style> -->
+
+    <!-- Body -->
+    <div class="container">
+      <div class="text-center">
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-secondary btn-round" >Events</button>
+            <button type="button" class="btn btn-round btn-default">Social Media</button>
+          </div>
+        </div>  
+    </div>
 
     <!-- Post Content -->
     <!-- <article>
@@ -158,6 +179,8 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/clean-blog.min.js"></script>
+    
+
 
   </body>
 
