--- a/about.html
+++ b/about.html
@@ -47,6 +47,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+                <a class="btn-primary btn-round" href="login.html">Log In</a>
+              </li>
           </ul>
         </div>
       </div>
